--- a/angular.json
+++ b/angular.json
@@ -124,7 +124,9 @@
         },
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
-          "options": {}
+          "options": {
+            "cname":  "uxmint.design"
+          }
         }
       }
     }
