--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@ngu/carousel": "^2.0.3",
     "angulartics2": "^7.5.2",
+    "animate.css": "^4.1.0",
     "bootstrap": "^4.3.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
