--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "node deploy.js"
+    "deploy-prod": "node deploy-prod.js",
+    "deploy-dev": "node deploy-dev.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
   },
   "homepage": "https://github.com/uxmint/uxmint.design#readme",
   "dependencies": {
-    "gh-pages": "^3.1.0",
-    "lodash": "^4.17.21"
+    "fs-extra": "^10.0.0",
+    "gh-pages": "^3.1.0"
   }
 }
