--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy-dev": "ng b --prod --base-href /dev/ && node deploy-dev.js"
   },
   "private": true,
   "dependencies": {
@@ -46,6 +47,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "fs-extra": "^10.0.0",
+    "gh-pages": "^3.2.3",
+    "guess-parser": "^0.4.22"
   }
 }
