--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@lottiefiles/lottie-player": "^1.5.7",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngu/carousel": "^3.0.2",
     "bootstrap": "^4.6.0",
